# ogemini-v1

./: .dockerignore  .gitignore  .ocamlformat  CLAUDE.md  Dockerfile  Dockerfile.secure  README.md  autonomous_verification_report.md  docker-compose.yml  dune-project  run_agent_test.py  test_agent.exp  test_agent.sh  test_edit_search.ml  test_microtask.ml  test_phase83.sh  test_phase84.sh
docs/: phase5-1-1-breakthrough.md  testing_framework.md
lib/: api_client.ml  build_error_parser.ml  cognitive_engine.ml  config.ml  conversation_manager.ml  dune  dune_generator.ml  enhanced_api_client.ml  event_parser.ml  llm_plan_parser.ml  micro_task_decomposer.ml  model_selector.ml  template_free_decomposer.ml  tool_orchestrator.ml  types.ml  ui.ml
ref_docs/: call_gemini.md
scripts/: debug-agent-test.sh  docker-cleanup.sh  docker-entrypoint.sh  docker-run.sh  docker-simple.sh  quick-agent-test.sh  run-autonomous-docker.sh  run-autonomous-with-trace.sh  test-agent-ocaml.sh  test-autonomous-docker.sh  test-autonomous-scenarios.sh  test-basic-docker.sh  test-docker-regression.sh  test-microtask-2048.sh  test-templatefree-system.sh  test-tool-docker.sh  test-tool-regression.sh
test/: dune  test_parser.ml
traces/: phase81_test_results_20250721_142850.md
workspace-autonomous/: simple.ml
workspace-bitlevel-robust/: IMPLEMENTATION_SPEC.md  SUCCESS_REPORT.md  dune  dune-project  main.ml
workspace-phase531/: dune  game.ml  (+6 more)
workspace-phase84-cleanroom/: dune  fibonacci.py  fixed_1.ml  fixed_2.ml  step_1.ml
workspace-phase84-test/: dune  dune-project  fibonacci.py  fixed_2.ml
(+79 files in other folders)
