Okay, I see a lot of files and directories in the current directory. What can I do for you? Do you want me to read a file, write a file, execute a shell command, build an OCaml project, run tests, clean build artifacts, edit a file, search files, analyze the project, or rename a module? Please be specific.