Okay, I see a list of files and directories. What would you like me to do with them? For example, I can:

* Read a specific file (e.g., `README.md`)
* List the contents of a specific directory (e.g., `lib/`)
* Search for a pattern in the files
* Execute a command using the shell
* Build the project using `dune`
* Run tests using `dune`
* Edit a file
* Rename a module
* Analyze the project